--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -50,20 +50,18 @@ body {
     text-align: center;
 }
 
-.login-header i {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-    display: block;
-}
-
-.login-header h1 {
-    font-size: 1.75rem;
-    margin-bottom: 0.5rem;
+.login-header .logo {
+    width: 140px;
+    height: 140px;
+    object-fit: contain;
+    margin: 0px ;
+    filter: drop-shadow(0 4px 6px rgba(0, 0, 0, 0.1));
 }
 
 .login-header p {
     font-size: 0.95rem;
     opacity: 0.9;
+    font-weight: bold;
 }
 
 /* Corpo do Login */
